--- a/Content/fourier_1D_intro2.ipynb
+++ b/Content/fourier_1D_intro2.ipynb
@@ -117,6 +117,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consider the Euler's formula ([equation 17](#eq17)) for an angle $-\\theta$. In this case, according to equations 1 and 2 of the part 1, we obtain:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{split}\n",
+    "e^{\\, i \\, \\left( -\\theta \\right)} &= \\overbrace{\\cos \\left( -\\theta \\right)}^{\\text{even function}} + \n",
+    "i \\, \\overbrace{\\sin\\left( -\\theta \\right)}^{\\text{odd function}} \\\\\n",
+    "&= \\cos \\left( \\theta \\right) - i \\, \\sin\\left( \\theta \\right)\n",
+    "\\end{split} \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By adding $e^{\\, i \\, \\left( -\\theta \\right)}$ to [equation 17](#eq17), we obtain "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq18a'></a>\n",
+    "\n",
+    "$$\n",
+    "\\cos \\left( \\theta \\right) = \\frac{1}{2} \\left( e^{\\, i \\, \\theta} + e^{\\, -i \\, \\theta}\\right) \\: , \\tag{18a}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and, by subtracting $e^{\\, i \\, \\left( -\\theta \\right)}$ from [equation 17](#eq17), we obtain "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq18b'></a>\n",
+    "\n",
+    "$$\n",
+    "\\sin \\left( \\theta \\right) = \\frac{1}{2 \\, i} \\left( e^{\\, i \\, \\theta} - e^{\\, -i \\, \\theta}\\right) \\: . \\tag{18b}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By substituting equations [17](#eq17), [18a](#eq18a), and [18b](#eq18b) into equation 6 of the part 1 and rearranging the terms, we can rewrite the Fourier transform as a function of complex exponentials as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq19'></a>\n",
+    "\n",
+    "$$\n",
+    "f \\left( x \\right) = \\frac{a_{0}}{2} + \\sum \\limits_{n=1}^{N} \\frac{1}{2} \\left( a_{n} - i \\, b_{n} \\right) \\\n",
+    "+ \\sum \\limits_{n=1}^{N} \\frac{1}{2} \\left( a_{n} + i \\, b_{n} \\right) \\: , \\quad N \\to \\infty \\: . \\tag{19}\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -125,273 +200,6 @@
    "outputs": [],
    "source": [
     "PAREI AQUI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "According to the [Figure 1](#fig1), we can see that $\\sin \\left( x \\right)$ **is an odd function** and $\\cos \\left( x \\right)$ **is an even function**, e.g.,"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "<a id='eq1'></a>\n",
-    "\n",
-    "$$\n",
-    "\\sin \\left( -x \\right) = -\\sin \\left( x \\right) \\tag{1}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "and"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='eq2'></a>\n",
-    "\n",
-    "$$\n",
-    "\\cos \\left( -x \\right) = \\cos \\left( x \\right) \\: . \\tag{2}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Besides, we know that"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='eq3a'></a>\n",
-    "\n",
-    "$$\n",
-    "\\int \\limits_{k \\pi}^{\\left( k + 2\\right) \\pi} \\sin \\left( x \\right) \\; dx = 0 \\tag{3a}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "and"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='eq3b'></a>\n",
-    "\n",
-    "$$\n",
-    "\\int \\limits_{k \\pi}^{\\left( k + 2\\right) \\pi}  \\cos \\left( x \\right) \\; dx = 0 \\: , \\tag{3b}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "for any integer $k$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "Consider the following sine and cosine functions:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "mfun.sine(-2.2*np.pi, 2.2*np.pi, [i for i in range(1,4)], npoints=200)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**<a id='fig2'>Figure 2</a>**: *Sine functions with different periods. The vertical lines are located at multiples of $\\pi$*."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "mfun.cosine(-2.2*np.pi, 2.2*np.pi, [i for i in range(1,4)], npoints=200)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**<a id='fig3'>Figure 3</a>**: *Cosine functions with different periods. The vertical lines are located at multiples of $\\pi$.*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Figures [2](#fig2) and [3](#fig3) show the functions $\\sin (n \\, x)$ and $\\cos (n \\, x)$ for $n = 1$, $2$, and $3$. Notice that the integer $k$ determines the number of times that the sine and cosine functions complete a cycle on the interval $\\left[ \\, 0 \\, , \\, 2 \\pi \\, \\right]$. In this case, the period $\\lambda$ of these functions can be defined as follows:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='eq4'></a>\n",
-    "\n",
-    "$$\n",
-    "\\lambda = \\frac{2 \\pi}{n} \\: . \\tag{4}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Notice that all functions $\\sin (n \\, x)$ and $\\cos (n \\, x)$, $n = 1, 2, 3, \\dots$,\n",
-    "\n",
-    "\n",
-    "* have a period represented by $\\lambda$, which is the smallest period, and\n",
-    "\n",
-    "\n",
-    "* have a common period equal to $2 \\pi$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Similarly to equations [3a](#eq3a) and [3b](#eq3b),"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='eq5a'></a>\n",
-    "\n",
-    "$$\n",
-    "\\int \\limits_{k \\pi}^{\\left( k + 2\\right) \\pi} \\sin \\left( n \\, x \\right) \\; dx = 0 \\: , \n",
-    "\\quad \\text{for any integer} \\; n \\: , \\tag{5a}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "and"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='eq5b'></a>\n",
-    "\n",
-    "$$\n",
-    "\\int \\limits_{k \\pi}^{\\left( k + 2\\right) \\pi} \\cos \\left( n \\, x \\right) \\; dx =\n",
-    "\\begin{cases} \\begin{split}\n",
-    "2 \\pi \\: &, \\quad n = 0 \\\\\n",
-    "0 \\: &, \\quad n \\ne 0\n",
-    "\\end{split} \\end{cases} \\quad . \\tag{5b}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What about a function obtained by stacking $\\sin (n \\, x)$ and $\\cos (n \\, x)$ defined by different integers $n$?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "mfun.sine_stack(-2.2*np.pi, 2.2*np.pi, [i for i in range(1,4)], npoints=200)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**<a id='fig4'>Figure 4</a>**: *Periodic function obtained by stacking $\\sin (n \\, x)$ defined by different integers $n$. For convenience, the function is normalized by the number of stacked functions. The vertical lines are located at multiples of $\\pi$.*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Notice that the resulting function obtained by stacking sine functions (thick black line in Figure [4](#fig4))\n",
-    "\n",
-    "\n",
-    "* has a period equal to $2 \\pi$, which is the common period of all functions $\\sin \\left( n \\, x\\right)$, and\n",
-    "\n",
-    "\n",
-    "* is also an odd function, like all functions $\\sin \\left( n \\, x\\right)$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "mfun.cosine_stack(-2.2*np.pi, 2.2*np.pi, [i for i in range(1,4)], npoints=200)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**<a id='fig5'>Figure 5</a>**: *Periodic function obtained by stacking $\\cos (n \\, x)$ defined by different integers $n$. For convenience, the function is normalized by the number of stacked functions. The vertical lines are located at multiples of $\\pi$.*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Similarly, the resulting function obtained by stacking cosine functions (thick black line in Figure [5](#fig5))\n",
-    "\n",
-    "\n",
-    "* has a period equal to $2 \\pi$, which is the common period of all functions $\\cos \\left( n \\, x\\right)$, and\n",
-    "\n",
-    "\n",
-    "* is also an even function, like all functions $\\cos \\left( n \\, x\\right)$."
    ]
   },
   {
