introduce in fourier intro 2 links to equations in the fourier intro 1

--- a/Content/fourier_1D_intro1.ipynb
+++ b/Content/fourier_1D_intro1.ipynb
@@ -35,9 +35,9 @@
     "* [Sine and cosine functions](#sec1)\n",
     "\n",
     "\n",
-    "* [Fourier series of functions with period $2 \\pi$](#sec2)\n",
+    "* [Fourier series of functions with period $2 \\pi$ as a function of sines and cosines](#sec2)\n",
     "\n",
-    "    * [Calculating $a_{n}$ and $b_{n}$ by using the orthogonalyty relations between sine and cosine functions](#subsec2.1)\n",
+    "    * [Calculating $a_{n}$ and $b_{n}$ by using the orthogonality relations between sine and cosine functions](#subsec2.1)\n",
     "\n",
     "\n",
     "* [Exercise - extra](#ex-extra-intro1)"
@@ -405,7 +405,7 @@
    "source": [
     "<a id='sec2'></a>\n",
     "\n",
-    "## Fourier series of functions with period $2 \\pi$"
+    "## Fourier series of functions with period $2 \\pi$  as a function of sines and cosines"
    ]
   },
   {
@@ -441,7 +441,7 @@
    "source": [
     "<a id='subsec2.1'></a>\n",
     "\n",
-    "### Calculating $a_{n}$ and $b_{n}$ by using the orthogonalyty relations between sine and cosine functions"
+    "### Calculating $a_{n}$ and $b_{n}$ by using the orthogonality relations between sine and cosine functions"
    ]
   },
   {
