--- a/Content/fourier_1D_intro2.ipynb
+++ b/Content/fourier_1D_intro2.ipynb
@@ -45,12 +45,12 @@
     "* [Complex exponential](#sec3)\n",
     "\n",
     "\n",
-    "* [Fourier series of functions with period $2 \\pi$](#sec2)\n",
+    "* [Fourier series of functions with period $2 \\pi$  as a function of complex exponentials](#sec4)\n",
     "\n",
-    "    * [Calculating $a_{n}$ and $b_{n}$ by using the orthogonalyty relations between sine and cosine functions](#subsec2.1)\n",
+    "    * [Calculating $c_{n}$ by using the orthogonality relations between complex exponentials](#subsec4.1)\n",
     "\n",
     "\n",
-    "* [Exercise - extra](#ex-extra-intro1)"
+    "* [Exercise - extra](#ex-extra-intro2)"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider the Euler's formula ([equation 17](#eq17)) for an angle $-\\theta$. In this case, according to equations 1 and 2 of the part 1, we obtain:"
+    "Consider the Euler's formula ([equation 17](#eq17)) for an angle $-\\theta$. In this case, according to equations [1](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_intro1.ipynb#eq1) and [2](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_intro1.ipynb#eq2) of the part 1, we obtain:"
    ]
   },
   {
@@ -140,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By adding $e^{\\, i \\, \\left( -\\theta \\right)}$ to [equation 17](#eq17), we obtain "
+    "By adding $e^{\\, i \\, \\left( -\\theta \\right)}$ to [equation 17](#eq17) and rearranging the terms, we obtain "
    ]
   },
   {
@@ -158,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and, by subtracting $e^{\\, i \\, \\left( -\\theta \\right)}$ from [equation 17](#eq17), we obtain "
+    "and, by subtracting $e^{\\, i \\, \\left( -\\theta \\right)}$ from [equation 17](#eq17) and rearranging the terms, we obtain "
    ]
   },
   {
@@ -176,7 +176,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By substituting equations [17](#eq17), [18a](#eq18a), and [18b](#eq18b) into equation 6 of the part 1 and rearranging the terms, we can rewrite the Fourier transform as a function of complex exponentials as follows:"
+    "<a id='sec4'></a>\n",
+    "\n",
+    "## Fourier series of functions with period $2 \\pi$ as a function of complex exponentials"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By substituting equations [17](#eq17), [18a](#eq18a), and [18b](#eq18b) into equation [6](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_intro1.ipynb#eq6) of the part 1 and rearranging the terms, we can rewrite the Fourier series as a function of complex exponentials as follows:"
    ]
   },
   {
@@ -189,6 +198,15 @@
     "f \\left( x \\right) = \\frac{a_{0}}{2} + \\sum \\limits_{n=1}^{N} \\frac{1}{2} \\left( a_{n} - i \\, b_{n} \\right) \\\n",
     "+ \\sum \\limits_{n=1}^{N} \\frac{1}{2} \\left( a_{n} + i \\, b_{n} \\right) \\: , \\quad N \\to \\infty \\: . \\tag{19}\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Notice that the two summations in [equation 19](#eq19) are defined for $n > 0$. It is usefull to know what happens for $n < 0$."
    ]
   },
   {
@@ -206,45 +224,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='sec2'></a>\n",
+    "<a id='subsec4.1'></a>\n",
     "\n",
-    "## Fourier series of functions with period $2 \\pi$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let $f (x)$ be a function that is periodic over $\\left[ 0 \\, , \\, 2 \\pi \\right]$, e. g., $f(x) = f(x + k \\, 2 \\pi)$, $k = 0, 1, 2, \\dots$, and satisfies the [Dirichlet conditions](https://en.wikipedia.org/wiki/Dirichlet_conditions) on this interval. In this case, $f(x)$ can be represented by an infinite series of sine and cosine functions given by"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='eq6'></a>\n",
-    "\n",
-    "$$\n",
-    "f(x) = \\frac{a_{0}}{2} + \\sum \\limits_{n=1}^{N} \n",
-    "\\underbrace{a_{n} \\cos \\left( n \\, x \\right)}_{\\text{even functions}} + \n",
-    "\\underbrace{b_{n} \\sin \\left( n \\, x \\right)}_{\\text{odd functions}} \\: , \\quad N \\to \\infty \\: , \\tag{6}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "where $a_{n}$ and $b_{n}$, $n = 0, 1, 2, \\dots$, are constants. Equation [6](#eq6) represents the **[Fourier series](https://en.wikipedia.org/wiki/Fourier_series)** of the function $f(x)$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='subsec2.1'></a>\n",
-    "\n",
-    "### Calculating $a_{n}$ and $b_{n}$ by using the orthogonalyty relations between sine and cosine functions"
+    "### Calculating $c_{n}$ by using the orthogonality relations between complex exponentials"
    ]
   },
   {
@@ -513,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='ex-extra'></a>\n",
+    "<a id='ex-extra-intro2'></a>\n",
     "\n",
     "## Exercise - extra"
    ]
