fourier intro 2 - complex exponential

--- a/Content/fourier_1D_intro1.ipynb
+++ b/Content/fourier_1D_intro1.ipynb
@@ -35,7 +35,7 @@
     "* [Sine and cosine functions](#sec1)\n",
     "\n",
     "\n",
-    "* [Fourier series of functions with period $2 \\pi$ as a function of sines and cosines](#sec2)\n",
+    "* [Fourier series defined as a combination of sines and cosines for describing functions with period $2 \\pi$](#sec2)\n",
     "\n",
     "    * [Calculating $a_{n}$ and $b_{n}$ by using the orthogonality relations between sine and cosine functions](#subsec2.1)\n",
     "\n",
@@ -405,7 +405,7 @@
    "source": [
     "<a id='sec2'></a>\n",
     "\n",
-    "## Fourier series of functions with period $2 \\pi$  as a function of sines and cosines"
+    "## Fourier series defined as a combination of sines and cosines for describing functions with period $2 \\pi$"
    ]
   },
   {
