--- a/Content/fourier_1D_intro2.ipynb
+++ b/Content/fourier_1D_intro2.ipynb
@@ -374,7 +374,7 @@
     "<a id='eq21a'></a>\n",
     "\n",
     "$$\n",
-    "\\int \\limits_{-\\pi}^{\\pi} e^{\\, i \\, -m \\, x} \\, e^{\\, i \\, n \\, x} \\, dx = \\text{A} + \\text{B} + \\text{C} \\: , \\tag{21a}\n",
+    "\\int \\limits_{-\\pi}^{\\pi} e^{\\, -i \\, m \\, x} \\, e^{\\, i \\, n \\, x} \\, dx = \\text{A} + \\text{B} + \\text{C} \\: , \\tag{21a}\n",
     "$$"
    ]
   },
@@ -457,7 +457,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq22a'></a>\n",
+    "<a id='eq22b'></a>\n",
     "\n",
     "$$\n",
     "\\int \\limits_{-\\pi}^{\\pi} e^{\\, -i \\, m \\, x} \\, e^{\\, i \\, n \\, x} \\, dx = 2 \\, \\pi \\: . \\tag{22b}\n",
@@ -475,7 +475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq22a'></a>\n",
+    "<a id='eq22c'></a>\n",
     "\n",
     "$$\n",
     "\\int \\limits_{-\\pi}^{\\pi} e^{\\, -i \\, m \\, x} \\, e^{\\, i \\, n \\, x} \\, dx = 2 \\, \\pi \\: . \\tag{22c}\n",
