fourier transform and discrete fourier transform

--- a/Content/fourier_1D_1.ipynb
+++ b/Content/fourier_1D_1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1D Fourier Transform - introduction - part 1"
+    "# 1D Fourier Transform - part 1"
    ]
   },
   {
