--- a/Content/fourier_1D_2.ipynb
+++ b/Content/fourier_1D_2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1D Fourier Transform - introduction - part 2"
+    "# 1D Fourier Transform - part 2"
    ]
   },
   {
@@ -184,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By substituting equations [18a](#eq18a) and [18b](#eq18b) into [equation 6](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_intro1.ipynb#eq6) of the part 1 and rearranging the terms, we can rewrite the Fourier series as a function of complex exponentials as follows:"
+    "By substituting equations [18a](#eq18a) and [18b](#eq18b) into [equation 6](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq6) of the part 1 and rearranging the terms, we can rewrite the Fourier series as a function of complex exponentials as follows:"
    ]
   },
   {
@@ -252,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "which is obtained by substituting $n = 0$ in equations [19b](#eq19b) and [19c](#eq19c). The coefficients $c_{n}$ ([equation 19b](#eq19b)) and $c_{n}^{\\ast}$ ([equation 19c](#eq19c)) are complex functions of the integer $n$. In [equation 19a](#eq19a), these complex functions are evaluated with $n > 0$. However, they can also be evaluated with $n < 0$. Let's analyse the particular case in which the coefficient $c_{n}^{\\ast}$ ([equation 19c](#eq19c)) and, consequently, the coefficients $a_{n}$ ([equation 15](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_intro1.ipynb#eq15)) and $b_{n}$ ([equation 16](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_intro1.ipynb#eq16)) are calculated by using $n < 0$. For convenience, let's denote a negative $n$ as $-n$ and the coefficients $a_{n}$ ([equation 15](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_intro1.ipynb#eq15)), $b_{n}$ ([equation 16](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_intro1.ipynb#eq16)), and $c_{n}^{\\ast}$ ([equation 19c](#eq19c)) calculated with $-n$ as $c_{-n}^{\\ast}$, $a_{-n}$, and $b_{-n}$, respectively. The coefficients $a_{-n}$, and $b_{-n}$ are given by:"
+    "which is obtained by substituting $n = 0$ in equations [19b](#eq19b) and [19c](#eq19c). The coefficients $c_{n}$ ([equation 19b](#eq19b)) and $c_{n}^{\\ast}$ ([equation 19c](#eq19c)) are complex functions of the integer $n$. In [equation 19a](#eq19a), these complex functions are evaluated with $n > 0$. However, they can also be evaluated with $n < 0$. Let's analyse the particular case in which the coefficient $c_{n}^{\\ast}$ ([equation 19c](#eq19c)) and, consequently, the coefficients $a_{n}$ ([equation 15](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq15)) and $b_{n}$ ([equation 16](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq16)) are calculated by using $n < 0$. For convenience, let's denote a negative $n$ as $-n$ and the coefficients $a_{n}$ ([equation 15](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq15)), $b_{n}$ ([equation 16](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq16)), and $c_{n}^{\\ast}$ ([equation 19c](#eq19c)) calculated with $-n$ as $c_{-n}^{\\ast}$, $a_{-n}$, and $b_{-n}$, respectively. The coefficients $a_{-n}$, and $b_{-n}$ are given by:"
    ]
   },
   {
@@ -276,7 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "which means that the coefficient $a_{n}$ ([equation 15](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_intro1.ipynb#eq15)) does not depend on the signal of $n$. On the other hand, by calculating $b_{n}$ ([equation 16](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_intro1.ipynb#eq16)) with $-n$, we obtain"
+    "which means that the coefficient $a_{n}$ ([equation 15](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq15)) does not depend on the signal of $n$. On the other hand, by calculating $b_{n}$ ([equation 16](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq16)) with $-n$, we obtain"
    ]
   },
   {
@@ -298,7 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "showing that the use of $-n$ changes the signal of the coefficient $b_{n}$ ([equation 16](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_intro1.ipynb#eq16)). From $a_{-n}$ and $b_{-n}$, we obtain:"
+    "showing that the use of $-n$ changes the signal of the coefficient $b_{n}$ ([equation 16](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq16)). From $a_{-n}$ and $b_{-n}$, we obtain:"
    ]
   },
   {
