--- a/Content/fourier_1D_3.ipynb
+++ b/Content/fourier_1D_3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1D Fourier Transform - introduction - part 3"
+    "# 1D Fourier Transform - part 3"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the previous classes, we have studied the Fourier series (equations [6](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_intro1.ipynb#eq6), [19a](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_intro2.ipynb#eq19a), and [20d](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_intro2.ipynb#eq20d)) of periodic functions with period $2 \\, \\pi$. These functions, however, can be transformed into functions with arbitrary period $T_{0}$ by changing variables. Consider, for example, a function $f(x)$ obtained by stacking sine functions:\n",
+    "In the previous classes, we have studied the Fourier series (equations [6](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq6), [19a](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_2.ipynb#eq19a), and [20d](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_2.ipynb#eq20d)) of periodic functions with period $2 \\, \\pi$. These functions, however, can be transformed into functions with arbitrary period $T_{0}$ by changing variables. Consider, for example, a function $f(x)$ obtained by stacking sine functions:\n",
     "\n",
     "$$\n",
     "f(x) = \\sin(x) + \\sin(2x) + \\sin(3x)\n",
@@ -336,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let $m$ and $n$ be integers, e. g., $m \\, , \\, n \\in \\mathbb{N}$. Based on equations [7](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_intro1.ipynb#eq7), [8](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_intro1.ipynb#eq8), and [9](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_intro1.ipynb#eq9), the new orthogonality relations between sine and cosine functions are given by:"
+    "Let $m$ and $n$ be integers, e. g., $m \\, , \\, n \\in \\mathbb{N}$. Based on equations [7](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq7), [8](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq8), and [9](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq9), the new orthogonality relations between sine and cosine functions are given by:"
    ]
   },
   {
@@ -504,7 +504,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let $m$ and $n$ be integers, e. g., $m \\, , \\, n \\in \\mathbb{N}$. Based on equations [21a](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_intro2.ipynb#eq21a)$-$[22c](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_intro2.ipynb#eq22c), the new orthogonality relations between exponential functions are given by:"
+    "Let $m$ and $n$ be integers, e. g., $m \\, , \\, n \\in \\mathbb{N}$. Based on equations [21a](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_2.ipynb#eq21a)$-$[22c](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_2.ipynb#eq22c), the new orthogonality relations between exponential functions are given by:"
    ]
   },
   {
@@ -537,7 +537,8 @@
     "<a id='eq36'></a>\n",
     "\n",
     "$$\n",
-    "g(y) = \\sum \\limits_{n=-N}^{N} c_{n} e^{\\, i \\, 2 \\, \\pi \\, n \\, f_{0} \\, y} \\: , \\quad \\text{for} \\; N \\to \\infty \\: , \\tag{36}\n",
+    "g(y) = \\sum \\limits_{n=-N}^{N} c_{n} \\, e^{\\, i \\, 2 \\, \\pi \\, n \\, f_{0} \\, y} \\: , \\quad \\text{for} \\; \n",
+    "N \\to \\infty \\: , \\tag{36}\n",
     "$$"
    ]
   },
@@ -551,15 +552,6 @@
     "c_{n} = \\frac{1}{T_{0}} \\int \\limits_{-\\frac{T_{0}}{2}}^{\\frac{T_{0}}{2}} e^{\\, -i \\, 2 \\, \\pi \\, n \\, f_{0} \\, y} \\, g(y) \\; dy \\: . \\tag{37}\n",
     "$$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
