correct small text errors

--- a/Content/diagonal_matrices.ipynb
+++ b/Content/diagonal_matrices.ipynb
@@ -128,7 +128,7 @@
     "\n",
     "1. Create a function that calculates the product `BA`. The function must receive the full matrix `B` and the diagonal of `A`.\n",
     "2. Create a function that calculates the product `AC`. The function must receive the diagonal of `A` and the full matrix `C`.\n",
-    "3. Use the `code-template.ipynb` for testing the two functions against the Python code shown below:"
+    "3. Use the `code-template.ipynb` for comparing the results produced by these two functions with the Python code shown below:"
    ]
   },
   {
@@ -346,7 +346,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -360,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
