--- a/Content/matrix-vector.ipynb
+++ b/Content/matrix-vector.ipynb
@@ -115,7 +115,7 @@
     "1. Create a function that implements the first approach and save it in an external file\n",
     "2. Create a function that implements the second approach and save it in an external file\n",
     "3. Create a function that implements the third approach and save it in an external file\n",
-    "3. Use the `code-template.ipynb` for testing the three functions against the python code shown below"
+    "3. Use the `code-template.ipynb` for comparing the results produced by these three functions with the python code shown below"
    ]
   },
   {
@@ -412,7 +412,7 @@
     "Show that this formulation is equivalent to the previously presented one. To do that,\n",
     "\n",
     "1. Create a function that calculates the moving average filter by using the matrix-vector product. This function must receive two arguments: the data vector and the number of points forming the moving window. This function must create the matrix $\\mathbf{A}$ and call one of the three functions created in the previous exercise for calculating the matrix-vector product.\n",
-    "2. Use the `code-template.ipynb` to compare the results produced by the function created in the previous step with the results produced by the function created in the previous class for calculating the moving average filter."
+    "2. Use the `code-template.ipynb` to compare the results produced by this simple moving average filter formulated as a matrix-vector product to the results produced by the simple moving average filter presented in the Exercise 1 (`first_steps_Python\\SMA\\sma.ipynb`)."
    ]
   },
   {
@@ -494,7 +494,7 @@
     "1. Create a function that receives a $N \\times 1$ data vector $\\mathbf{y}$ and return the first derivatives calculated according to the matrix-vector product presented above. The function must call one the functions created in the Exercise 5 for calculating the matrix-vector product.\n",
     "2. Use the `code-template.ipynb` to test this function. Create a vector `theta` with the function [numpy.arange](http://docs.scipy.org/doc/numpy/reference/generated/numpy.arange.html), by using the arguments `0.`, `2*np.pi`, `dtheta`, where `dtheta = 2.*np.pi/1000`. Create a data vector `y` by using the [numpy.sin](http://docs.scipy.org/doc/numpy/reference/generated/numpy.sin.html) function.\n",
     "3. Calculate a vector `z_true` by using the [numpy.cos](http://docs.scipy.org/doc/numpy/reference/generated/numpy.cos.html) function.\n",
-    "4. Calculate a `z_calc` vector with our function and compare with the `z_true` vector by using the [numpy.allclose](http://docs.scipy.org/doc/numpy/reference/generated/numpy.allclose.html) function. Remember that the first and last elements of `z_calc` will be equal to zero. This fact must be taken into account in the test."
+    "4. Calculate a `z_calc` vector with your function and compare with the `z_true` vector by using the [numpy.allclose](http://docs.scipy.org/doc/numpy/reference/generated/numpy.allclose.html) function. Remember that the first and last elements of `z_calc` will be equal to zero. This fact must be taken into account in the test."
    ]
   },
   {
@@ -658,8 +658,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -673,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
