--- a/Content/other.ipynb
+++ b/Content/other.ipynb
@@ -127,7 +127,7 @@
     "\n",
     "1. Create a function according to the first approach and save it in an external file\n",
     "2. Create a function according to the second approach and save it in an external file\n",
-    "3. Use the `code-template.ipynb` for testing the two functions against each other"
+    "3. Use the `code-template.ipynb` for comparing the results produced by the two functions"
    ]
   },
   {
@@ -230,7 +230,7 @@
     "1. Create a function according to the first approach and save it in an external file\n",
     "2. Create a function according to the second approach and save it in an external file\n",
     "3. Create a function according to the third approach and save it in an external file\n",
-    "4. Use the `code-template.ipynb` for testing the two functions against the python code shown below"
+    "4. Use the `code-template.ipynb` for comparing the results produced by these three functions with the code presented below"
    ]
   },
   {
@@ -480,7 +480,7 @@
     "\n",
     "1. Create the inputs $\\mathbf{a}^{\\top}$, $\\mathbf{b}$, $\\mathbf{1}_{3 \\times 1}$ and $\\mathbf{1}_{1 \\times 5}$\n",
     "\n",
-    "2. Calculate $\\mathbf{A}$ and $\\mathbf{B}$ by using the your outer product functions\n",
+    "2. Calculate $\\mathbf{A}$ and $\\mathbf{B}$ by using one of your outer product functions\n",
     "\n",
     "3. Calculate $\\mathbf{A}$ and $\\mathbf{B}$ by using the `numpy.meshgrid` function\n",
     "\n",
@@ -505,8 +505,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -520,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
