--- a/Content/special_linear_syst.ipynb
+++ b/Content/special_linear_syst.ipynb
@@ -134,7 +134,7 @@
     "Validate the algorithm for solving an upper triangular system according to the steps below:\n",
     "\n",
     "1. Create a function that solves the linear system `Ax` for an upper triangular `A`. The function must receive the matrix `A` and the vector `x`.\n",
-    "3. Use the `code-template.ipynb` for testing this function against the Python code shown at the end of this notebook."
+    "3. Use the `code-template.ipynb` for comparing this function with the Python code shown at the end of this notebook."
    ]
   },
   {
@@ -151,7 +151,7 @@
     "Validate the algorithm for solving a lower triangular system according to the steps below:\n",
     "\n",
     "1. Create a function that solves the linear system `Ax` for a lower triangular `A`. The function must receive the matrix `A` and the vector `x`.\n",
-    "3. Use the `code-template.ipynb` for testing this function against the Python code shown at the end of this notebook."
+    "3. Use the `code-template.ipynb` for comparing this function with the Python code shown at the end of this notebook."
    ]
   },
   {
@@ -319,7 +319,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -333,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
