--- a/Content/chol_decomp.ipynb
+++ b/Content/chol_decomp.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider a linear a linaer system"
+    "Consider a linear system"
    ]
   },
   {
@@ -175,7 +175,7 @@
     "\n",
     "3. Test if `A` = `GG`<sup>T</sup>\n",
     "\n",
-    "4. Test your solution of the linear system against the solution obtained by using the routine [`numpy.linalg.solve`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html)"
+    "4. Compare your solution of the linear system with the solution obtained by using the routine [`numpy.linalg.solve`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html)"
    ]
   },
   {
@@ -244,7 +244,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -258,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
