--- a/Content/matrix-matrix.ipynb
+++ b/Content/matrix-matrix.ipynb
@@ -200,7 +200,7 @@
    "metadata": {},
    "source": [
     "    for i = 1:N\n",
-    "        C[i,:] = dot(A[i,:],B[:,:].T)"
+    "        C[i,:] = dot(A[i,:],B[:,:])"
    ]
   },
   {
@@ -311,7 +311,7 @@
     "Show that these five approaches are equivalent. To do this, follow the steps below:\n",
     "\n",
     "1. Create five functions for implementing these five approaches and save them in an external file\n",
-    "2. Use the `code-template.ipynb` for testing the five functions against the python code shown below"
+    "2. Use the `code-template.ipynb` for comparing the results produced by these five functions to the result produced by the python code shown below"
    ]
   },
   {
@@ -374,29 +374,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  57.,   64.],\n",
-       "       [  89.,  100.]])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.dot(A[1:], B[:])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -407,7 +384,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -421,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
