--- a/Content/symmetric_matrices.ipynb
+++ b/Content/symmetric_matrices.ipynb
@@ -125,7 +125,7 @@
     "Validate this algorithm according to the steps below:\n",
     "\n",
     "1. Create a function that calculates the product `Sx`. The function may receive the full symmetric matrix `S` or just its upper part (including the diagonal) and the vector `x`.\n",
-    "2. Use the `code-template.ipynb` for testing the two functions against the Python code shown below:"
+    "2. Use the `code-template.ipynb` for comparing the your function with the Python code shown below:"
    ]
   },
   {
@@ -240,7 +240,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -254,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
